--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,30 +1,34 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  # Schedule daily updates
+  # Schedule updates (each hour)
   schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
   push: {branches: ["master", "main"]}
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment:
-      name: production
     permissions:
       contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
+
+          # Options
+          user: vincnx
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Jakarta
-          plugin_achievements: yes
-          plugin_achievements_display: compact
-          plugin_achievements_limit: 12
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
           plugin_habits: yes
           plugin_habits_charts: yes
           plugin_habits_charts_type: graph
@@ -46,3 +50,8 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_leetcode: yes
+          plugin_leetcode_limit_recent: 2
+          plugin_leetcode_limit_skills: 10
+          plugin_leetcode_sections: solved
+          plugin_leetcode_user: vincnx
