--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -56,4 +56,4 @@ jobs:
           plugin_leetcode_limit_recent: 2
           plugin_leetcode_limit_skills: 10
           plugin_leetcode_sections: solved
-          plugin_leetcode_user: user5808RE
+          plugin_leetcode_user: vincnx
